# views-stepshifter

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py  tutorial.ipynb
.github/workflows/: codeql.yml  prevent_merge_when_branch_behind.yml  publish_package.yml  run_pytest.yml
docs/ADRs/: 001_reproducibility_gate.md  002_artifact_prediction_timestamp_contract.md  003_raw_target_space_io_contract.md
docs/CICs/: ReproducibilityGate.md
docs/stories/: reproducibility_gate.md  target_transform_declarative.md
reports/: postmortem_pgm_forecast_stripe_grid_id_leak.md  technical_risk_register.md
reports/2026-06-08_restore_target_compression_dossier/: 00_README.md  02_design.md  04_roadmap.md  05_analysis_plan.md  06_glossary.md  07_experiment_log.md  08_forensic_what_happened.md  exp01_brown_cheese.py  exp01_readout.py  test_exp01_readout.py
reports/2026-06-13_hurdle_point_estimate_diagnosis/: diag_d33_d37.py  findings.md
reports/2026-06-14_hurdle_point_estimator_dossier/: 00_README.md  01_literature.md  02_design.md  03_harness_and_invariants.md  04_roadmap.md  05_analysis_plan.md  06_glossary.md  07_experiment_log.md  exp01_tail_readout.py  postmortem_exp01_hard_gate_drops_escalations.md
reports/archived/2026-06-08_restore_target_compression_dossier/: 00_README.md  01_literature.md  03_harness_and_invariants.md  04_roadmap.md  05_preanalysis_exp01.md  07_experiment_log.md  (+4 more)
scripts/archived/: eval_lib_imp.md  prompt.md  static_verify_report_claims.py  stepshifter_full_eval_imp_report.md  verify_report_claims.py
tests/: test_falsification_pr51.py  test_falsification_root_cause_no_compression.py  test_hurdle_model.py  test_reproducibility_gate.py  test_stepshifter.py  test_stepshifter_manager.py  test_target_transforms.py  test_validation.py
views_stepshifter/: __init__.py  utils.py
views_stepshifter/base_models/: lightgbm.py  random_forest.py
views_stepshifter/cuda/: models.py  random_forest.py
views_stepshifter/infrastructure/: exceptions.py  reproducibility_gate.py  transforms.py
views_stepshifter/manager/: __init__.py  stepshifter_manager.py
views_stepshifter/models/: Predictions_explorer.ipynb  __init__.py  base_models.py  darts_model.py  hurdle_model.py  shurf.py  shurf_model.py  stepshifter.py  updated_hurdle_model.py  validation.py
views_stepshifter/postprocessor/: __init__.py  stochastic_smoother.py
