[tool.poetry]
name = "views_stepshifter"
version = "0.3.0"
description = ""
authors = [
    "Xiaolong Sun <xiaolong.sun@pcr.uu.se>",
    "Borbála Farkas <borbala.farkas@pcr.uu.se>",
    "Dylan Pinheiro <dylpin@prio.org>"
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
views_pipeline_core = ">=1.0.0,<2.0.0"
scikit-learn = "^1.6.0"
pandas = "^1.5.3"
numpy = "^1.25.2"
darts = "^0.30.0"
lightgbm = "4.4.0"
views_forecasts = "^0.5.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
