[tool.poetry]
name = "views_stepshifter"
version = "1.3.0"
description = ""
authors = [
    "Xiaolong Sun <xiaolong.sun@pcr.uu.se>",
    "Borbála Farkas <borbala.farkas@pcr.uu.se>",
    "Dylan Pinheiro <dylpin@prio.org>"
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
# INTERIM (pending views-pipeline-core 3.0.0 on PyPI): source from the development
# branch over git so this development branch tracks the unreleased 3.x. Revert to a
# version pin (>=3.0.0,<4.0.0) once 3.0.0 is published.
views_pipeline_core = { git = "https://github.com/views-platform/views-pipeline-core.git", branch = "development" }
scikit-learn = "^1.6.0"
pandas = "^1.5.3"
numpy = "^1.25.2"
darts = "^0.40.0"
lightgbm = "4.6.0"
views_forecasts = "^0.5.5"
xgboost = "^3.0.0"
scipy = "1.15.1" # error with latest scipy 1.16.0. see https://github.com/statsmodels/statsmodels/issues?q=_lazywhere



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
